--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
     </parent>
     <groupId>com.dystopiastudios</groupId>
     <artifactId>easystory</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>easystory</name>
     <description>RESTful API for EasyStory</description>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
@@ -156,10 +156,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
+
+          
         </plugins>
     </build>
 
