--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://bbd59a1c3417a6:0f9592c6@us-cdbr-east-03.cleardb.com/heroku_fa801e570c0b0f4?reconnect=true
+spring.datasource.url=mysql://bbd59a1c3417a6:0f9592c6@us-cdbr-east-03.cleardb.com/heroku_fa801e570c0b0f4?reconnect=true
 spring.datasource.username=bbd59a1c3417a6
 spring.datasource.password=0f9592c6
 
