--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <groupId>com.dystopiastudios</groupId>
     <artifactId>easystory</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>easystory</name>
     <description>RESTful API for EasyStory</description>
